--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ header > a {
     height: 450px;
     border-radius: 50%;
     background-color: transparent;
-    border: 1px solid black;
+    border: 2px solid #E8E8E8;
     display: flex;
     align-items: center;
     justify-content: center;
